processed/gerrit/txt/60005.txt
Change:     60005
Subject:    LU-19137 osd-zfs: wrap kmem_cache_zalloc to avoid alloc_hooks
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/60005
Change-Id:  I66e3cadcc97184832320878bcbeff29881240332
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Shaun Tancheff
Created:    2025-07-01 15:35:21.000000000
Updated:    2025-07-22 02:52:09.000000000
Patch Set:  1
Insertions: +6
Deletions:  -1
Comments:   0 (0 unresolved)

--- Reviewers ---
  REVIEWER: Timothy Day

--- Commit Message ---
LU-19137 osd-zfs: wrap kmem_cache_zalloc to avoid alloc_hooks

zfs 2.3.3 build fails with:

lustre/include/obd_support.h:977:49: error: pointer/integer type \
mismatch in conditional expression [-Werror]
  977 |                 kmem_cache_zalloc(slab, (type)) :
      |                                                 ^

Workaround with an explicit inline wrapper for kmem_cache_zalloc()

Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: I66e3cadcc97184832320878bcbeff29881240332

--- Review History ---

--- Message (Shaun Tancheff, 2025-07-01 15:35:21.000000000) ---
Uploaded patch set 1.

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2025-07-01 15:41:31.000000000) ---
Patch Set 1:

Code-wise looks good to me.

--- Message (jenkins, 2025-07-01 18:32:11.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/114717/ : SUCCESS

--- Message (Timothy Day, 2025-07-02 00:30:24.000000000) ---
Patch Set 1: Code-Review+1

--- Message (wc-checkpatch, 2025-07-07 20:22:47.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Shaun Tancheff, 2025-07-22 02:52:09.000000000) ---
Abandoned

Merged into v6.15 support
